Update Swagger file
